Added arduino libraries.

--- a/Arduino/EnvMonitor/platformio.ini
+++ b/Arduino/EnvMonitor/platformio.ini
@@ -12,6 +12,9 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_extra_dirs =
-    L:\WaltieL\PROJECTS\Arduino\Libraries\GyverLibs
-    L:\WaltieL\PROJECTS\Arduino\Libraries
+lib_deps =
+    OneWire
+    GyverTM1637
+    OneWire
+    DallasTemperature
+    LiquidCrystal_I2C
