Added external ADC ADS1115 to read NTC with 16-bit resolution.

--- a/Arduino/EnvMonitor/platformio.ini
+++ b/Arduino/EnvMonitor/platformio.ini
@@ -13,7 +13,9 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 lib_deps =
-    OneWire
+    GyverTM1637
     OneWire
     DallasTemperature
     LiquidCrystal_I2C
+    I2Cdev
+    ADS1115
